NextGenAppPackage/main/default/objects/Applicant__c/fields/EuropeanCitizenship__c.field-meta.xml
<CustomField>
    <fullName>EuropeanCitizenship__c</fullName>
    <defaultValue>false</defaultValue>
    <label>European Citizenship</label>
    <type>Checkbox</type>
</CustomField>