NextGenAppPackage/main/default/objects/Applicant__c/fields/PossibleStartDate__c.field-meta.xml
<CustomField>
    <fullName>PossibleStartDate__c</fullName>
    <label>Possible Start Date</label>
    <type>Date</type>
</CustomField>