NextGenAppPackage/main/default/objects/Applicant__c/listViews/todos.listView-meta.xml
<ListView>
    <fullName>todos</fullName>
    <columns>NAME</columns>
    <columns>Qualification__c</columns>
    <columns>PossibleStartDate__c</columns>
    <columns>Department__c</columns>
    <columns>EuropeanCitizenship__c</columns>
    <filterScope>Mine</filterScope>
    <label>todos</label>
</ListView>